# ansible-tools-collection

./: .ansible-lint  .ansible-lint-ignore  .flake8  .gitignore  .isort.cfg  .markdownlint.yml  .pre-commit-config.yaml  .syncignore  .yamllint  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  devfile.yaml  galaxy.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.txt  requirements.yml  test-requirements.txt  tox-ansible.ini
.config/: constraints.txt
.devcontainer/: devcontainer.json
.devcontainer/assets/: .gitignore_global  Dockerfile  postCreateCommand.sh
.github/workflows/: gh-pages.yml  release.yml  tests.yml  validate_collection_version.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
changelogs/archive_fragments/0.1.0/: first_pre_release.yaml
changelogs/archive_fragments/0.1.1/: fix_changelog_docs.yaml  fix_devcontainer.yaml  fix_docs_update.yaml
changelogs/archive_fragments/0.1.2/: fix_version.yaml
changelogs/fragments/: add_role_pki.yaml  first_pre_release.yaml  fix_devcontainer.yaml  fix_gh_workflow.yaml  fix_gh_workflow_deps.yaml  fix_integration_tests.yaml  fix_tests.yaml  update_documentation.yaml
docs/: .gitignore  antsibull-docs.cfg  conf.py  requirements-build.in  requirements-build.txt  requirements.in  requirements.txt
docs/docsite/: changelog.rst  config.yml  index.rst  links.yml  pki_role.rst
docs/preview/: conf.py
extensions/molecule/: config.yml
roles/pki/: README.md
roles/pki/handlers/: main.yml
tests/unit/: test_basic.py
(+28 files in other folders)
