[project]
name = "sinetris.tools"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]
